Tweak TOC styling to prevent cutting off headers

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -30,3 +30,7 @@
     }
   }
 }
+
+#toc-wrapper ul .toc-link {
+  white-space: normal;
+}
